# news_pipeline

./: .editorconfig  CONTRIBUTING.md  README.md  alembic.ini  makefile  pyproject.toml  readme.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 5ddc39439f78_first_migration.py  b4db05ce1bfb_first_migration.py  c7113c54d14b_first_migration.py
bash/: create_source.sh
ci/: ci.sh
docs/: index.html  plan.html
docs/plan/: plan.md
docs/prompts/: alpha.md
docs/specs/: spec_alpha.md  spec_charlie.md  spec_echo.md  spec_echo_update.md  spec_foxtrot.md
docs/tasks/: tasks.md
notes/: alpha.md
plan/: index.html
scripts/: run_ingest.py
specs/: spec.md  spec_bravo.md  spec_delta.md
src/news_pipeline/: __init__.py  crud.py  database.py  main.py  models.py  models_alpha.py  schemas.py
src/news_pipeline/parsers/: base.py  text_parser.py
src/news_pipeline/pipeline/: ingestion.py
tasks/: tasks.md
