[project]
name = "web-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
web-pipeline = "web_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
